--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -423,7 +423,6 @@ input, select, textarea {
 
 		}
 
-
 	label {
 		color: #ffffff;
 		display: block;
@@ -1192,12 +1191,9 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto,
- 256px 256px;
-			background-position: center,
- center;
-			background-repeat: no-repeat,
- repeat;
+			background-size: auto, 256px 256px;
+			background-position: center, center;
+			background-repeat: no-repeat, repeat;
 			z-index: 2;
 		}
 
@@ -1343,18 +1339,26 @@ input, select, textarea {
 			}
 
 		#header .logo {
-			width: 7.5rem;
-			height: 7.5rem;
+		
 			line-height: 7.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 50%;
+			width: 7.5rem;
+			height: 7.5rem;
+
+overflow:hidden;
+
 		}
 
 img.rounded {
-  object-fit: cover;
-  border-radius: 50%;
-  height: 7.5rem;
-  width: 7.5rem;
+  
+position: relative;
+object-fit: cover;
+height:100%; 
+width:116%
+object-position: -10px 0;
+
+
 }
 
 			#header .logo .icon:before {
