--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,8 @@ footer, header, hgroup, menu, nav, section {
 
 /* Important stuff for this demo. */
 
+ul.space_list li { margin-bottom: 1em; }
+
 img {
   width: 100%;
   height: auto;
@@ -167,7 +169,7 @@ input, select, textarea {
 		@media screen and (max-width: 1680px) {
 
 			html {
-				font-size: 12pt;
+				font-size: 14pt;
 			}
 
 		}
@@ -1325,7 +1327,7 @@ input, select, textarea {
 				position: absolute;
 				top: calc(-3.5rem - 1px);
 				left: calc(50% - 1px);
-				width: 1px;
+				width: 0px;
 				height: calc(3.5rem + 1px);
 				background: #ffffff;
 			}
@@ -1343,8 +1345,8 @@ input, select, textarea {
 			line-height: 7.5rem;
 			border: solid 1px #ffffff;
 			border-radius: 50%;
-			width: 7.5rem;
-			height: 7.5rem;
+			width: 9rem;
+			height: 9rem;
 
 overflow:hidden;
 
@@ -1607,7 +1609,7 @@ object-position: -10px 0;
 			transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
 			padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
 			position: relative;
-			width: 40rem;
+			width: 50rem;
 			max-width: 100%;
 			background-color: rgba(27, 31, 34, 0.85);
 			border-radius: 4px;
