--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1193,9 +1193,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
@@ -1343,7 +1346,7 @@ input, select, textarea {
 		#header .logo {
 		
 			line-height: 7.5rem;
-			border: solid 1px #ffffff;
+			border: solid 10px #ffffff;
 			border-radius: 50%;
 			width: 10rem;
 			height: 10rem;
